# vpdiscordbot

./: .gitignore  LICENSE  README.md  bridge-restart  discordbot.js  package-lock.json  package.json
Configuration/: avs-db.json  bot-configuration.json  cols-db.json
DiscordBot/: discordbot.js  package-lock.json  package.json
VPBot_src/: .gitignore  CMakeLists.txt
VPBot_src/cmake/: FindBoost.cmake
VPBot_src/include/: botsettings.hpp
VPBot_src/src/: CMakeLists.txt  vpdiscordbot.cpp
