include_directories ( "${PROJECT_SOURCE_DIR}/include" )

if ( "${CMAKE_SYSTEM_NAME}" MATCHES "Linux" )
    set ( THIRD_PARTY_DIR "${PROJECT_SOURCE_DIR}/thirdparty/linux64" )
    set ( VPSDK_LIB "${THIRD_PARTY_DIR}/lib/libvpsdk.so" )
    set ( VPSDK_LIB_INSTALL "${VPSDK_LIB}" )
    include_directories ( "${PROJECT_SOURCE_DIR}/thirdparty/linux64/include" )
elseif ( WIN32 )
    if ( MINGW )
        message ( FATAL_ERROR "VPSDK does not support MinGW. Please use MSVC." )
    else () 
        set ( THIRD_PARTY_DIR "${PROJECT_SOURCE_DIR}/thirdparty/win-msvc" )
        include_directories ( "${PROJECT_SOURCE_DIR}/thirdparty/win-msvc/include" )
        set ( VPSDK_LIB "${THIRD_PARTY_DIR}/lib/VPSDK.lib" )
        set ( VPSDK_LIB_INSTALL "${THIRD_PARTY_DIR}/lib/VPSDK.dll" )
    endif ()
else ()
    message ( FATAL_ERROR "VPSDK does not support OSX." )
endif ()

set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME     OFF)
find_package(Boost 1.66.0 COMPONENTS system date_time)

include_directories(${Boost_INCLUDE_DIRS})
add_executable ( vpdiscordbot vpdiscordbot.cpp )
target_link_libraries ( vpdiscordbot ${VPSDK_LIB} ${Boost_LIBRARIES})
install (TARGETS vpdiscordbot DESTINATION bin )
install (FILES ${VPSDK_LIB_INSTALL} DESTINATION bin )
